<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/ic_settings_24"
        android:title="@string/title_setting" />

    <item
        android:id="@+id/navigation_localisation"
        android:icon="@drawable/ic_baseline_location_on_24"
        android:title="@string/title_localisation" />

    <item
        android:id="@+id/navigation_findit"
        android:icon="@drawable/outline_people_24"
        android:title="@string/title_findit" />
    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/ic_baseline_chat_24"
        android:title="@string/title_chat" />
    <item
        android:id="@+id/navigation_profil"
        android:icon="@drawable/ic_baseline_manage_accounts_24"
        android:title="@string/title_profil" />

</menu>