<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_setting">

    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.abdelah.nav_bar_bottom.ui.settings.SettingsFragment"
        android:label="@string/title_setting"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/navigation_localisation"
        android:name="com.abdelah.nav_bar_bottom.ui.localisation.LocalisationFragment"
        android:label="@string/title_localisation"
        tools:layout="@layout/fragment_localisation" />

    <fragment
        android:id="@+id/navigation_findit"
        android:name="com.abdelah.nav_bar_bottom.ui.findit.FinditFragment"
        android:label="@string/title_findit"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.abdelah.nav_bar_bottom.ui.chat.ChatFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_chat" />
    <fragment
        android:id="@+id/navigation_profil"
        android:name="com.abdelah.nav_bar_bottom.ui.manageProfil.ProfilFragment"
        android:label="@string/title_profil"
        tools:layout="@layout/fragment_profil" />
</navigation>